[7x] remove Java9 references